--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,12 @@
 <h1>Heyhey this is index-page</h1>
 <p> Welcome <%= name %>
+        <p>Sign up below if this is your first time visiting the page. Otherwise go to login</p>
+
+        <form method="POST" action="users/signup">
+            <label>Username:</label>
+            <input type="text" name="username"><br />
+            <label>Password: </label>
+            <input type="text" name="password">
+            <input type="submit" value="sign up">
+        </form>
 </p>
