build photos logic + add link for login to index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <h1>Heyhey this is index-page</h1>
 <p> Welcome <%= name %>
-        <p>Sign up below if this is your first time visiting the page. Otherwise go to login</p>
+        <p>Sign up below if this is your first time visiting the page. Otherwise go to <a
+                href="/users/login">/users/login</a></p>
 
         <form method="POST" action="users/signup">
             <label>Username:</label>
