--- a/views/channelList.ejs
+++ b/views/channelList.ejs
@@ -57,6 +57,7 @@
             margin-right: -250px;
         }
 
+
         /* Sidebar Styles */
 
         .sidebar-nav {
@@ -132,6 +133,63 @@
                 margin-right: 0;
             }
         }
+
+        /*chat area styling*/
+
+        body {
+            margin: 0;
+            padding-bottom: 3rem;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        }
+
+        #form {
+            background: rgba(0, 0, 0, 0.15);
+            padding: 0.25rem;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            display: flex;
+            height: 3rem;
+            box-sizing: border-box;
+            backdrop-filter: blur(10px);
+        }
+
+        #input {
+            border: none;
+            padding: 0 1rem;
+            flex-grow: 1;
+            border-radius: 2rem;
+            margin: 0.25rem;
+        }
+
+        #input:focus {
+            outline: none;
+        }
+
+        #form>button {
+            background: #333;
+            border: none;
+            padding: 0 1rem;
+            margin: 0.25rem;
+            border-radius: 3px;
+            outline: none;
+            color: #fff;
+        }
+
+        #messages {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        #messages>li {
+            padding: 0.5rem 1rem;
+        }
+
+        #messages>li:nth-child(odd) {
+            background: #efefef;
+        }
     </style>
 </head>
 
@@ -151,7 +209,7 @@
                 </li>
                 <% for(let i=0; i < channel.length ; i++) { %>
                     <li>
-                        <a href=#>#
+                        <a href="">#
                             <%= channel[i].name %>
                         </a>
 
@@ -161,8 +219,8 @@
         </div>
         <!-- /#sidebar-wrapper -->
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
+        <!-- Chat Content -->
+        <div id="page-content-wrapper chat-content">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
@@ -175,7 +233,15 @@
                             canvas.
                         </p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+
+                        <!--Socket stuff. Messages will be put in a list-->
+                        <ul id="messages"></ul>
+
+                        <form action="" id="form">
+                            <input type="text" id="input" placeholder="type a message">
+                            <button type="submit">Send</button>
+                        </form>
+                        
                     </div>
                 </div>
             </div>
@@ -192,6 +258,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
         crossorigin="anonymous"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="../public/chat.js"></script>
+    <!--^chat.js includes const socket = io()-->
 </body>
 <html>
